--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "illuminate/support": "^9.0|^10.0",
+        "illuminate/support": "^8.40|^9.0|^10.0",
         "spatie/laravel-mailcoach": "^6.0"
     },
     "require-dev": {
