--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.1",
+        "php": "^8.0",
         "ext-json": "*",
-        "spatie/laravel-mailcoach": "^6.0"
+        "illuminate/support": "^9.0",
+        "spatie/laravel-mailcoach": "^5.2"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0|^8.0",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.5",
         "symfony/var-dumper": "^6.0"
     },
